<resources>
    <string name="app_name">UmpireBuddy</string>

    <string name="txt_title"><u><i>Umpire</i><b>Buddy</b></u></string>

    <string name="txt_strikes">0</string>
    <string name="txt_balls">0</string>
    <string name="txt_outs">0</string>

    <string name="btn_strikes">+ Strike</string>
    <string name="btn_balls">+ Ball</string>
    <string name="btn_outs">+ Out</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_about">About</string>
    <string name="btn_exit">Exit</string>

    <string name="out_dialog_title">Out!</string>
    <string name="out_dialog_msg">Three strikes, the batter\'s out!</string>
    <string name="walk_dialog_title">Walk!</string>
    <string name="walk_dialog_msg">Four balls, that\'s a walk.</string>
</resources>
